styling various areas of interface

--- a/bower.json
+++ b/bower.json
@@ -23,16 +23,16 @@
     "jquery": "2.2.1",
     "jquery-file-upload": "~9.10.4",
     "jquery.jsoneditor": "https://raw.githubusercontent.com/DavidDurman/FlexiJsonEditor/master/jquery.jsoneditor.js",
-    "angular": "angularjs#^1.5.0",
+    "angular": "1.4.8",
     "ui-router": "~0.2.15",
     "angular-foundation": "~0.6.0",
-    "angular-mocks": "1.4.2",
+    "angular-mocks": "1.4.8",
     "angular-md5": "~0.1.7",
     "angular-recursion": "~1.0.5",
-    "angular-route": "1.4.2",
+    "angular-route": "1.4.8",
     "angular-ui-select": "~0.12.0",
-    "angular-sanitize": "1.4.2",
-    "angular-resource": "1.4.2",
+    "angular-sanitize": "1.4.8",
+    "angular-resource": "1.4.8",
     "angular-ui-tree": "~2.6.0",
     "angular-xeditable": "~0.1.9",
     "blueimp-tmpl": ">=2.5.4",
